# inspect-dockerfile-repro

./: Dockerfile  main.py  pyproject.toml  run_from_task.sh
task/: Dockerfile
