[tool.poetry]
name = "inspect-dockerfile-repro"
version = "0.1.0"
description = ""
authors = ["tadamcz <tadamczewskipublic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
inspect-ai = "^0.3.40"
datasets = "^3.0.1"
openai = "^1.51.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

